Ajout librairie Animate on scroll

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,7 +9,7 @@
     <hr>
 
    <section id="features">
-       {{>features-3}}
+       {{>features-4}}
    </section>
 
     <section id="platforms">
@@ -22,7 +22,7 @@
 
     <section id="testimonial-slider" class="margin-top-3">
         <h2 class="text-center margin-bottom-3">How It Can Help Everyone</h2>
-        {{>testimonial-slider-img}}
+        {{>testimonial-slider-txt}}
     </section>
 
     <section id="testimonial-cards">
