Création des partials pour le template Agency, passage des librairies JS en local

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -2,8 +2,8 @@
 
 <main id="main-content-section" data-magellan-target="main-content-section">
 
-    <section class="section" id="intro">
-        {{>txt-img}}
+    <section class="section grid-container" id="intro">
+        {{>txt-video}}
     </section>
 
     <hr>
@@ -13,20 +13,20 @@
    </section>
 
     <section id="platforms">
-        <div class="grid-container text-center">
-            <h2 class="margin-bottom-0">The Cross-Platform Framework</h2>
-            <p class="lead">You can build for small devices first. Then, as devices get larger and larger, layer in more complexity for a complete responsive design.</p>
+        <div class="grid-container text-center text-container">
+            <h2 class="h1 margin-bottom-0">The Cross-Platform Framework</h2>
+            <p class="subheading">You can build for small devices first. Then, as devices get larger and larger, layer in more complexity for a complete responsive design.</p>
         </div>
         {{>platforms}}
     </section>
 
     <section id="testimonial-slider" class="margin-top-3">
-        <h2 class="text-center margin-bottom-3">How It Can Help Everyone</h2>
-        {{>testimonial-slider-txt}}
+        <h2 class="h1 text-center margin-bottom-3">How It Can Help Everyone</h2>
+        {{>testimonial-slider-img}}
     </section>
 
     <section id="testimonial-cards">
-        <h2 class="text-center margin-bottom-3">What People Are Saying</h2>
+        <h2 class="h1 text-center margin-bottom-3">What People Are Saying</h2>
         {{>testimonial-cards}}
     </section>
 
@@ -36,5 +36,5 @@
 
 </main>
 
-{{>footer-basic}}
+{{>footer-links-social}}
 
